--- a/templates/community.html
+++ b/templates/community.html
@@ -54,18 +54,9 @@
         <div class="col-md-8">
           <h2>Join the Discussion</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam
-            lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam
-            viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent
-            et diam eget libero egestas mattis sit amet vitae augue.
+            Joining the discussion of a community page is a great way to engage with like-minded individuals and expand your knowledge on a particular topic. Community pages often host discussions, ask questions, and provide a platform for members to share their experiences, opinions, and ideas. By participating in the conversation, you can gain new perspectives, learn from others' experiences, and contribute your own insights. Additionally, joining a community page can help you build connections and network with people who share similar interests or goals. It's a fantastic opportunity to grow and expand your understanding while connecting with a community of people who share your interests.
           </p>
-          <p>
-            Nam tincidunt congue enim, ut porta lorem lacinia consectetur. Donec
-            ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor
-            sit amet, consectetur adipiscing elit. Aenean ut gravida lorem.
-            Ut turpis felis, pulvinar a semper sed, adipiscing id dolor. Pellentesque
-            auctor nisi id magna consequat sagittis.
-          </p>
+          
           <form>
             <div class="form-group">
               <label for="name">Name</label>
@@ -85,17 +76,11 @@
           <div class="col-md-4">
             <h2>Get Involved</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam
-              lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam
-              viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent
-              et diam eget libero egestas mattis sit amet vitae augue.
-            </p>
-            <p>
-              Nam tincidunt congue enim, ut porta lorem lacinia consectetur. Donec
-              ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor
-              sit amet, consectetur adipiscing elit. Aenean ut gravida lorem.
-              Ut turpis felis, pulvinar a semper sed, adipiscing id dolor. Pellentesque
-              auctor nisi id magna consequat sagittis.
+              Getting involved in a community is an excellent way to meet new people, make a positive impact, and have fun! Whether you are passionate about volunteering, supporting local causes, or simply connecting with others who share similar interests, there are plenty of ways to get involved. From attending community events to joining clubs and organizations, there are opportunities for people of all ages and backgrounds to contribute and make a difference. By participating in your community, you can build meaningful relationships, develop new skills, and help create a vibrant and thriving environment for everyone to enjoy. So why not take the first step and get involved today? Your community will be all the better for it!
+
+
+
+
             </p>
           </div>
         </div>
