--- a/templates/learn.html
+++ b/templates/learn.html
@@ -41,7 +41,7 @@
             <a class="nav-link" href="learn.html">Learn</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="community.html">Community</a>
+            <a class="nav-link" href="http://127.0.0.1:5000/community">Community</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact Us</a>
@@ -55,34 +55,24 @@
         <div class="col-md-8">
           <h1>Learn About Personal Finance</h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor,
-            diam eu luctus lacinia, massa turpis bibendum nunc, nec porttitor purus
-            turpis et nulla. Etiam auctor velit vitae nunc molestie, sed lobortis
-            mi tristique. Nullam porttitor elit vel nisl fermentum fringilla. Fusce
-            ac urna a erat congue scelerisque eu quis enim. Maecenas mattis eget
-            augue nec venenatis. Nam ullamcorper mauris sed dolor luctus, eu facilisis
-            lacus feugiat. Pellentesque id quam id ipsum semper vulputate. Vivamus
-            vel augue tristique, sagittis sapien eu, maximus nulla. Sed non est ac
-            massa gravida tincidunt at a erat. Aliquam sed tellus ex.
+            Learning about personal finance involves gaining knowledge and understanding about managing your own money and financial resources. This can include topics such as budgeting, saving, investing, debt management, retirement planning, and more.
+
+By learning about personal finance, you can make informed decisions about how to allocate your money and resources, avoid financial pitfalls and debt, and work towards achieving your long-term financial goals. It can also help you become more financially secure, reduce financial stress, and improve your overall well-being.
+
+Personal finance is a life-long learning process, as financial needs and circumstances can change over time. Some ways to learn about personal finance include reading books, taking courses or workshops, seeking advice from financial professionals, and seeking out reliable online resources.
+
+Overall, developing a strong foundation of knowledge and skills in personal finance can help you make better financial decisions, achieve your financial goals, and feel more confident and empowered in managing your money.
           </p>
-          <p>
-            Phasellus eget euismod lectus. Aliquam fermentum lectus a justo elementum
-            varius. Sed aliquet magna at tellus consectetur vestibulum. Curabitur
-            eget enim vel massa ultrices finibus. Duis non turpis nunc. Nunc
-            faucibus eros eu enim luctus dapibus. Nunc in mauris dolor. Cras vel
-            arcu pharetra, ornare lacus vel, pretium velit. Aliquam euismod,
-            turpis ac rutrum dignissim, odio urna consequat diam, at mollis
-            sapien lacus quis odio.
-          </p>
+         
         </div>
         <div class="col-md-4">
           <h3>Popular Articles</h3>
           <ul class="list-group">
-            <li class="list-group-item"><a href="#">Article 1</a></li>
-            <li class="list-group-item"><a href="#">Article 2</a></li>
-            <li class="list-group-item"><a href="#">Article 3</a></li>
-            <li class="list-group-item"><a href="#">Article 4</a></li>
-            <li class="list-group-item"><a href="#">Article 5</a></li>
+            <li class="list-group-item"><a href="https://www.investopedia.com/insights/what-is-money/">Concept of money</a></li>
+            <li class="list-group-item"><a href="https://www.investopedia.com/articles/03/082703.asp">Time value of money</a></li>
+            <li class="list-group-item"><a href="https://www.investopedia.com/terms/i/investment.asp">Investment</a></li>
+            <li class="list-group-item"><a href="https://www.investopedia.com/terms/a/alternative_investment.asp">Alternate investment</a></li>
+            <li class="list-group-item"><a href="https://www.investopedia.com/ask/answers/031615/what-impact-does-economics-have-government-policy.asp">Economy and government</a></li>
           </ul>
         </div>
       </div>
