--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,67 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BizWiz</title>
+    <!-- CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.2/css/bootstrap.min.css">
+
+<!-- JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.2/js/bootstrap.min.js"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <style>
       body {
-        background-color: #E5E0FF;
+        background-color: #B5D5C5;
       }
+      </style>
+      <style>
+      .navbar-nav .nav-link {
+  color: #ffffff; /* set the text color of the links to white */
+}
+.navbar-nav .nav-link.active {
+  color: #7bc6e4; /* set the text color of the active link to white */
+}
+.navbar-brand {
+  color: #ffffff; /* set the text color of the brand to white */
+}
+/* CSS code */
+.social-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
+
+/* CSS code */
+.social-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.social-icons a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  margin: 0 10px;
+  text-align: center;
+  transition: all 0.3s ease-in-out;
+}
+
+.social-icons a:hover {
+  transform: scale(1.2);
+}
+
+
+
+
+
+
+
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-primary">
+    <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">BizWiz</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +73,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#" >Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="http://127.0.0.1:5000/learn">Learn</a>
@@ -32,7 +84,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="http://127.0.0.1:5000/community">Community</a></li>
-                  <li><a class="dropdown-item" href="#">Games</a></li>
+                  <li><a class="dropdown-item" href="file:///C:/Users/sabya/OneDrive/Desktop/hacknation-20230216T194439Z-001/hacknation/index.html">Games</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Help</a></li>
                 </ul>
@@ -45,8 +97,17 @@
           </div>
         </div>
       </nav>
-    <div class="container my-3" >
-        <h3>Login</h3>
+      <div class="container card my-3" style="width: 18rem;">
+        <img src="./Screenshot.jpg" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title">Welcome to Bizwiz</h5>
+          <p class="card-text">a place to learn finance in a fun,engaging way. Sign up to get started</p>
+          <a href="#" class="btn btn-primary">Take a tour</a>
+        </div>
+      </div>
+      
+    <div class="container my-3 px-5" >
+        <h3>Sign up</h3>
         <form>
             <div class="mb-3">
               <label for="email" class="form-label">Email</label>
@@ -59,38 +120,17 @@
             <button type="submit" class="btn btn-primary">Submit</button>
           </form> 
     </div>
-    <div class="container my-3" >
-        <h3>Your Tasks</h3>
-        <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">SNo.</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+    <div data-tf-popover="TDvei4Ru" data-tf-opacity="100" data-tf-iframe-props="title=bizwiz (copy)" data-tf-transitive-search-params data-tf-button-color="#0445AF" data-tf-medium="snippet" style="all:unset;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+    <div data-tf-sidetab="GZCKhQx2" data-tf-opacity="100" data-tf-iframe-props="title=tracker (copy)" data-tf-transitive-search-params data-tf-button-color="#0445AF" data-tf-button-text="TACKO" data-tf-medium="snippet" style="all:unset;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+    <div class="container"><!-- HTML code -->
+      <!-- HTML code -->
+<div class="social-icons">
+  <a href="https://www.facebook.com/"><img src="facebook-icon.png" alt="Facebook"></a>
+  <a href="https://www.instagram.com/"><img src="instagram-icon.png" alt="Instagram"></a>
+  <a href="https://www.twitter.com/"><img src="twitter-icon.png" alt="Twitter"></a>
+</div>
+
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
   </body>
